@@ -1,3 +1,8 @@
+2006-12-26  Matthew Gregan  <kinetik@orcon.net.nz>
+
+	* Makefile.am (BOTAN_SOURCES): distcheck target is failing because
+	the headers for Botan are missing.  Add missing line continuation.
+
 2006-12-22  Derek Scherger  <derek@echologic.com>
 
 	* paths.cc (normalize_external_path): factor new function out of
